<resources>
    <string name="app_name">MyThirdApplication</string>
    <string name="click">Click</string>
    <string name="hello_android">Hello Androids!</string>
    <string name="new_tex">New NEW!</string>
    <string name="botton2">Return</string>
    <string name="key_hint">Please, enter the key of product</string>
    <string name="settings">Settings</string>
    <string name="item_menu_temperature">Show Temperature</string>
    <string name="item_menu_support">Support service</string>
    <string name="item_menu_update">Download updates</string>
    <string name="activity_two_text_1">Screen 2!</string>
    <string name="main_activity_h_tex">Screen main H!</string>

    <!-- first Activity-->
    <string name="first_act_name">Pir Face</string>
    <string name="data">Temperature (°C) : </string>
    <string name="buttom_firsr_FA">Contact the device!</string>
    <string name="buttom_second_FA">Update link!</string>
    <string name="buttom_stop_link_FA">Stop Link!</string>
    <string name="buttom_select_mode_FA">Select mode!</string>
    <string name="instructions_titile">Instructions for communicating with the device:</string>
    <string name="temperature">No connection</string>
    <string name="preview_mode_link">Mode link: </string>
    <string name="mode_link">mode Work - 0x40</string>
    <string name="accepted_str">Accepted data</string>
    <!-- Settings-->
    <string name="titile_table_1">Operation: </string>
    <string name="titile_table_2">Code operation: </string>
    <string name="mode_link_1">mode Work: </string>
    <string name="hint_1">(default 0x40)</string>
    <string name="mode_link_2">mode Amplification:</string>
    <string name="hint_2">(default 0x41)</string>
    <string name="mode_link_3">mode Linearity:</string>
    <string name="hint_3">(default 0x42)</string>
    <string name="mode_link_4">mode Offset:</string>
    <string name="hint_4">(default 0x43)</string>
    <string name="mode_link_5">mode ratio 1T:</string>
    <string name="hint_5">(default 0x44)</string>
    <string name="mode_link_6">mode ratio 2T:</string>
    <string name="hint_6">(default 0x45)</string>
    <string name="mode_link_7">mode Course:</string>
    <string name="hint_7">(default 0x46)</string>
    <string name="incoming_bytes">Incoming bytes:</string>
    <string name="hint_8">(default 12)</string>
    <string name="data_query_operation">Data query operation:</string>
    <string name="hint_9">(default "1")</string>
    <string name="speed_transfer">Transmission speed:</string>
    <string name="hint_10">(default "9200")</string>
    <string name="buttom_clear">Reset settings</string>
    <!-- Instructions-->

    <string name="intro_str_1">1. Connect the pyrometer. </string>
    <string name="intro_str_2">2. Press the start button and wait for the connection message. </string>
    <string name="intro_str_3">3. When the "Select Mode" button is pressed for a long time, a context menu appears with the choice of the mode of operation</string>

</resources>
