<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textIntroduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/instructions_titile"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/intro_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/intro_str_1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/intro_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/intro_str_2"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/intro_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/intro_str_3"
        android:textSize="14sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>