<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/fragment_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:text="@string/data"
            android:background="@drawable/my_border"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/temperature_in_data"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="0dp"
            android:text="@string/temperature"
            android:background="@drawable/my_border"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/accepted_data"
            android:layout_gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/accepted_str"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mode_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_temperature">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/preview_mode_link"
            android:textSize="15dp" />

        <!--Это важная хуйня. Тут режим работы с пирометром задается -->
        <TextView
            android:id="@+id/mode_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/mode_link"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_pair_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/mode_info">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/buttom_firsr_FA" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/buttom_stop_link_FA" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/insert_data_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/buttons_pair_first"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_for_select_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttom_select_mode_FA"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/data_operation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="code operation"
            android:textSize="15dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>