<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/title_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_weight="2">

            <TextView
                android:layout_weight="1"
                android:text="@string/titile_table_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="29dp" />

            <TextView
                android:layout_weight="1"
                android:text="@string/titile_table_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="29dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_table"
            app:layout_constraintBottom_toTopOf="@id/settind_clean"
            android:orientation="vertical">

        </ListView>
    <Button
        android:id="@+id/settind_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttom_clear"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</android.support.constraint.ConstraintLayout>